---
source: minijinja/tests/test_compiler.rs
description: "{\"closure\": \"original closure\"}\n---\n{% macro info(a, b) %}\n  closure: {{ closure }}\n  name: {{ caller.name }}\n  args: {{ caller.arguments }}\n  caller: {{ caller.caller }}\n  a: {{ a }}\n  b: {{ b }}\n  result: {{ caller(a, b) }}\n{% endmacro %}\n\n{% set closure = \"other closure\" %}\n{% call(a, b) info(1, 2) %}{{ [a, b, closure] }}{% endcall %}"
input_file: minijinja/tests/inputs/macro_caller_methods.txt
---
(
    [
        00000 | EmitRaw("{\"closure\": \"original closure\"}\n---\n")  [line 1],
        00001 | Jump(32)  [line 3],
        00002 | StoreLocal("b"),
        00003 | StoreLocal("a"),
        00004 | EmitRaw("\n  closure: "),
        00005 | Lookup("closure")  [line 4],
        00006 | Emit,
        00007 | EmitRaw("\n  name: "),
        00008 | Lookup("caller")  [line 5],
        00009 | GetAttr("name"),
        00010 | Emit,
        00011 | EmitRaw("\n  args: "),
        00012 | Lookup("caller")  [line 6],
        00013 | GetAttr("arguments"),
        00014 | Emit,
        00015 | EmitRaw("\n  caller: "),
        00016 | Lookup("caller")  [line 7],
        00017 | GetAttr("caller"),
        00018 | Emit,
        00019 | EmitRaw("\n  a: "),
        00020 | Lookup("a")  [line 8],
        00021 | Emit,
        00022 | EmitRaw("\n  b: "),
        00023 | Lookup("b")  [line 9],
        00024 | Emit,
        00025 | EmitRaw("\n  result: "),
        00026 | Lookup("a")  [line 10],
        00027 | Lookup("b"),
        00028 | CallFunction("caller", 2),
        00029 | Emit,
        00030 | EmitRaw("\n"),
        00031 | Return,
        00032 | Enclose("closure"),
        00033 | GetClosure,
        00034 | LoadConst(["a", "b"]),
        00035 | BuildMacro("info", 2, 2),
        00036 | StoreLocal("info"),
        00037 | EmitRaw("\n\n")  [line 11],
        00038 | LoadConst("other closure")  [line 13],
        00039 | StoreLocal("closure"),
        00040 | EmitRaw("\n"),
        00041 | LoadConst(1)  [line 14],
        00042 | LoadConst(2),
        00043 | LoadConst("caller"),
        00044 | Jump(53),
        00045 | StoreLocal("b"),
        00046 | StoreLocal("a"),
        00047 | Lookup("a"),
        00048 | Lookup("b"),
        00049 | Lookup("closure"),
        00050 | BuildList(3),
        00051 | Emit,
        00052 | Return,
        00053 | Enclose("closure"),
        00054 | GetClosure,
        00055 | LoadConst(["a", "b"]),
        00056 | BuildMacro("caller", 45, 0),
        00057 | BuildKwargs(1),
        00058 | CallFunction("info", 3),
        00059 | Emit,
    ],
    {},
)
